--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -19,6 +19,8 @@ html {
 .grid {
   width: 1440px;
   max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .pad-x-146 {
@@ -53,6 +55,28 @@ html {
   margin-top: 16px !important;
 }
 
+.mt-32 {
+  margin-top: 32px !important;
+}
+
+.mt-48 {
+  margin-top: 48px !important;
+}
+
+.mt-64 {
+  margin-top: 64px !important;
+}
+
 .mt-128 {
   margin-top: 128px !important;
+}
+
+.ml-16 {
+  margin-left: 16px !important;
+}
+
+.dot-end::after {
+  content: ".";
+  display: inline-block;
+  color: var(--secondary-color);
 }
